--- a/boykot.html
+++ b/boykot.html
@@ -69,7 +69,7 @@
     <h3>İletişim Bilgilerini Paylaşarak BİM Markete Özel Şikayet İçin</h3>
     <a href="https://www.bim.com.tr/Categories/679/bize-ulasin.aspx" class="link-button">Bim Şikayet ve İstek Formu</a>
     <hr>
-    <h3>İlatişim Bilgilerini Paylaşarak Tarım Kredi Kooperatifine Özel Şikayet İçin</h3>
+    <h3>İletişim Bilgilerini Paylaşarak Tarım Kredi Kooperatifine Özel Şikayet İçin</h3>
     <a href="https://www.tarimkredi.org.tr/iletisim/" class="link-button">Tarım Kredi ve İstek Formu</a>
     <hr>
     <h3>Change İmza Kampanyası 1000 Sayısını Geçtiği İçin Sonlandı. Şimdi Hedefimiz Çağrıyı Marketlere Ulaştırmak</h3>
