--- a/boykot.html
+++ b/boykot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Tarım Kredi,Şok ve A-101 Markete change.org dan Yapılan İmza Kampanyası Çağrısının Duyurusu</title>
+    <title>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı</title>
     <style>
         body {
             font-family: Arial, sans-serif;
