--- a/boykot.html
+++ b/boykot.html
@@ -60,7 +60,18 @@
             color: #A9A9A9; /* Hafif gri renk */
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6Y7YR9YXZV"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-6Y7YR9YXZV');
+    </script>
 </head>
+
 <body>
 
 <div class="container">
