--- a/boykot.html
+++ b/boykot.html
@@ -59,6 +59,18 @@
         h4 {
             color: #A9A9A9; /* Hafif gri renk */
         }
+
+        .share-buttons {
+            display: flex;
+            gap: 10px;
+        }
+        .share-buttons a {
+            text-decoration: none;
+        }
+        .share-buttons img {
+            width: 40px;
+            height: 40px;
+        }
     </style>
 
     <!-- Google tag (gtag.js) -->
@@ -85,6 +97,46 @@
     <hr>
     <h3>İletişim Bilgilerini Paylaşarak Tarım Kredi Kooperatifine Özel Şikayet İçin</h3>
     <a href="https://www.tarimkredi.org.tr/iletisim/" class="link-button">Tarım Kredi ve İstek Formu</a>
+    <hr>
+    <h3>Sosyal Medyada Paylaş</h3>
+    <div class="share-buttons">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
+            <img src="https://www.mediamister.com/images/tools/facebook.svg" alt="Facebook">
+        </a>
+        <a href="https://www.instagram.com/?url=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
+            <img src="https://www.mediamister.com/images/tools/instagram.svg" alt="Instagram">
+        </a>
+        <a href="https://api.whatsapp.com/send?text=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
+            <img src="https://www.svgrepo.com/show/176768/whatsapp-social-media.svg" alt="WhatsApp">
+        </a>
+        <a href="https://twitter.com/intent/tweet?url=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
+            <img src="https://www.mediamister.com/images/tools/twitter.svg" alt="Twitter">
+        </a>
+        <a href="https://t.me/share/url?url=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
+            <img src="https://www.svgrepo.com/show/354443/telegram.svg" alt="Telegram">
+        </a>
+        <a href="https://www.tiktok.com/share/video/your_video_id_here" target="_blank">
+            <img src="https://www.mediamister.com/images/tools/tiktok.svg" alt="TikTok">
+        </a>
+        <a href="https://www.reddit.com/submit?url=your_url_here&title=your_title_here" target="_blank">
+            <img src="https://www.mediamister.com/images/tools/reddit.svg" alt="Reddit">
+        </a>
+
+        <a href="https://www.pinterest.com/pin/create/button/?url=your_url_here&media=your_image_url_here&description=your_description_here" target="_blank">
+            <img src="https://www.mediamister.com/images/tools/pinterest.svg" alt="Pinterest">
+        </a>
+
+        <a href="https://www.snapchat.com/scan?attachmentUrl=your_url_here&utm_source=snap_map" target="_blank">
+            <img src="https://www.mediamister.com/images/tools/snapchat.svg" alt="Snapchat">
+        </a>
+
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=your_url_here&title=your_title_here&summary=your_summary_here&source=your_source_here" target="_blank">
+            <img src="https://www.mediamister.com/images/tools/linkedin.svg" alt="LinkedIn">
+        </a>
+    </div>
+    <hr>
+    <h3>Arkadaşınla Linki Paylaş</h3>
+    <img src="qr.png" width="300" alt="QrCode">
     <hr>
     <h4>Change İmza Kampanyası Desteklerinizle 1000 İmzaya Ulaştı. Kampanya Teknik Bir Sorun Nedeniyle Geçici Olarak Kapalıdır. Tekrar Açılması İçin Talep Oluşturulmuştur. Şimdi Yapmamız Gereken, <b>Çağrıyı Marketlere Ulaştırmak.</b></h4>
     <a href="https://chng.it/7JRxMqKPdK" class="link-button">change.org İmza Kampanyası</a>
