--- a/boykot.html
+++ b/boykot.html
@@ -136,7 +136,7 @@
     </div>
     <hr>
     <h3>Arkadaşınla Linki Paylaş</h3>
-    <img src="qr.png" width="300" alt="QrCode">
+    <img src="QR.png" width="300" alt="QrCode">
     <hr>
     <h4>Change İmza Kampanyası Desteklerinizle 1000 İmzaya Ulaştı. Kampanya Teknik Bir Sorun Nedeniyle Geçici Olarak Kapalıdır. Tekrar Açılması İçin Talep Oluşturulmuştur. Şimdi Yapmamız Gereken, <b>Çağrıyı Marketlere Ulaştırmak.</b></h4>
     <a href="https://chng.it/7JRxMqKPdK" class="link-button">change.org İmza Kampanyası</a>
