--- a/boykot.html
+++ b/boykot.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı</title>
+    <link rel="icon" href="https://www.svgrepo.com/show/501832/stop.svg" type="image/x-icon">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -136,7 +137,7 @@
     </div>
     <hr>
     <h3>Arkadaşınla Linki Paylaş</h3>
-    <img src="QR.png" width="300" alt="QrCode">
+    <img src="qrlink.png" width="300" alt="QrCode">
     <hr>
     <h4>Change İmza Kampanyası Desteklerinizle 1000 İmzaya Ulaştı. Kampanya Teknik Bir Sorun Nedeniyle Geçici Olarak Kapalıdır. Tekrar Açılması İçin Talep Oluşturulmuştur. Şimdi Yapmamız Gereken, <b>Çağrıyı Marketlere Ulaştırmak.</b></h4>
     <a href="https://chng.it/7JRxMqKPdK" class="link-button">change.org İmza Kampanyası</a>
