--- a/boykot.html
+++ b/boykot.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı</title>
-    <link rel="icon" href="https://www.svgrepo.com/show/501832/stop.svg" type="image/x-icon">
+    <link rel="icon" href="stop.png" type="image/x-icon">
+
+    <meta property="og:title" content="Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı">
+    <meta property="og:description" content="Bu Kampanya İlo Boykot Ürünlerin Raflardan Kaldırılması Hedefleniyor">
+    <meta property="og:image" content="boykot.png">
+    <meta property="og:url" content="https://boykotcagrisi.github.io/boykot/boykot.html">
     <style>
         body {
             font-family: Arial, sans-serif;
