--- a/boykot.html
+++ b/boykot.html
@@ -9,7 +9,7 @@
 
     <meta property="og:title" content="Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı">
     <meta property="og:description" content="Bu Kampanya İlo Boykot Ürünlerin Raflardan Kaldırılması Hedefleniyor">
-    <meta property="og:image" content="boykot.png">
+    <meta property="og:image" content="stop.png">
     <meta property="og:url" content="https://boykotcagrisi.github.io/boykot/boykot.html">
     <style>
         body {
