--- a/boykot.html
+++ b/boykot.html
@@ -3,14 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı" />
+    <meta name="twitter:card" content="summary_large_image" />
 
-    <title>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı</title>
     <link rel="icon" href="stop.png" type="image/x-icon">
 
-    <meta property="og:title" content="Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı">
-    <meta property="og:description" content="Bu Kampanya İlo Boykot Ürünlerin Raflardan Kaldırılması Hedefleniyor">
-    <meta property="og:image" content="stop.png">
+    <meta property="og:title" content="Boykot Çağrısı">
+    <meta property="og:description" content="Bu Kampanya İle Boykot Ürünlerin Raflardan Kaldırılması Hedefleniyor">
+    <meta property="og:type" content="website" />
     <meta property="og:url" content="https://boykotcagrisi.github.io/boykot/boykot.html">
+    <meta property="og:image" content="boykotlogolar.png">
+
+    <title>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı</title>
+
+
+    <meta name="description" content="We’re on a journey to advance and democratize artificial intelligence through open source and open science." />
+    <meta property="fb:app_id" content="1321688464574422" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@huggingface" />
+    <meta property="og:title" content="Qwen2" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://huggingface.co/docs/transformers/model_doc/qwen2" />
+    <meta property="og:image" content="https://huggingface.co/front/thumbnails/docs/transformers.png" />
+
+
     <style>
         body {
             font-family: Arial, sans-serif;
