--- a/boykot.html
+++ b/boykot.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Bu Kampanya İle Boykot Ürünlerin Raflardan Kaldırılması Hedefleniyor">
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://boykotcagrisi.github.io/boykot/boykot.html">
-    <meta property="og:image" content="boykotlogolar.png">
+    <meta property="og:image" content="https://raw.githubusercontent.com/BoykotCagrisi/boykot/main/boykotlogolar.png">
 
     <title>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı</title>
 
