--- a/boykot.html
+++ b/boykot.html
@@ -6,14 +6,18 @@
     <meta name="description" content="Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı" />
     <meta name="twitter:card" content="summary_large_image" />
 
-    <link rel="icon" href="stop.png" type="image/x-icon">
+    <link rel="icon" href="stop.png" type="image/x-icon"/>
 
-    <meta property="og:title" content="Boykot Çağrısı">
-    <meta property="og:description" content="Bu Kampanya İle Boykot Ürünlerin Raflardan Kaldırılması Hedefleniyor">
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://boykotcagrisi.github.io/boykot/boykot.html">
-    <meta property="og:image" content="https://raw.githubusercontent.com/BoykotCagrisi/boykot/main/boykotlogolar.png">
+    <meta property="og:title" content="Boykot Çağrısı"/>
+    <meta property="og:description" content="Bu Kampanya İle Boykot Ürünlerin Raflardan Kaldırılması Hedefleniyor"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="https://boykotcagrisi.github.io/boykot/boykot.html"/>
+    <meta property="og:image" content="https://raw.githubusercontent.com/BoykotCagrisi/boykot/main/boykotlogolar.png"/>
 
+
+
+
+    
     <title>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı</title>
 
 
