--- a/boykot.html
+++ b/boykot.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="tr">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı" />
     <meta name="twitter:card" content="summary_large_image" />
 
