--- a/boykot.html
+++ b/boykot.html
@@ -17,7 +17,7 @@
 
 
 
-    
+
     <title>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Markete change.org,dan Yapılan İmza Kampanyası Çağrısı</title>
 
 
@@ -120,9 +120,11 @@
         <a href="https://www.facebook.com/sharer/sharer.php?u=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
             <img src="https://www.mediamister.com/images/tools/facebook.svg" alt="Facebook">
         </a>
+
         <a href="https://www.instagram.com/?url=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
-            <img src="https://www.mediamister.com/images/tools/instagram.svg" alt="Instagram">
+        <img src="https://www.mediamister.com/images/tools/instagram.svg" alt="Instagram">
         </a>
+
         <a href="https://api.whatsapp.com/send?text=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
             <img src="https://www.svgrepo.com/show/176768/whatsapp-social-media.svg" alt="WhatsApp">
         </a>
@@ -132,23 +134,26 @@
         <a href="https://t.me/share/url?url=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
             <img src="https://www.svgrepo.com/show/354443/telegram.svg" alt="Telegram">
         </a>
-        <a href="https://www.tiktok.com/share/video/your_video_id_here" target="_blank">
+        <a href="https://www.tiktok.com/share/video/?url=https%3A%2F%2Fboykotcagrisi.github.io%2Fboykot%2Fboykot.html" target="_blank">
             <img src="https://www.mediamister.com/images/tools/tiktok.svg" alt="TikTok">
         </a>
-        <a href="https://www.reddit.com/submit?url=your_url_here&title=your_title_here" target="_blank">
+
+        <a href="https://www.reddit.com/submit?url=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
             <img src="https://www.mediamister.com/images/tools/reddit.svg" alt="Reddit">
         </a>
 
-        <a href="https://www.pinterest.com/pin/create/button/?url=your_url_here&media=your_image_url_here&description=your_description_here" target="_blank">
+        <a class="pinterest" href="https://pinterest.com/pin/create/button/?url=https://boykotcagrisi.github.io/boykot/boykot.html=https://raw.githubusercontent.com/BoykotCagrisi/boykot/main/boykotonizleme.png&description=Boykot_Çağrısı" target="blank" title="pinterest"><i class="fa fa-pinterest-p"></i>
             <img src="https://www.mediamister.com/images/tools/pinterest.svg" alt="Pinterest">
         </a>
 
-        <a href="https://www.snapchat.com/scan?attachmentUrl=your_url_here&utm_source=snap_map" target="_blank">
+        <a href="https://www.snapchat.com/scan?attachmentUrl=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
             <img src="https://www.mediamister.com/images/tools/snapchat.svg" alt="Snapchat">
         </a>
 
-        <a href="https://www.linkedin.com/shareArticle?mini=true&url=your_url_here&title=your_title_here&summary=your_summary_here&source=your_source_here" target="_blank">
+        <a href="https://www.linkedin.com/shareArticle?mini=true&url=https://boykotcagrisi.github.io/boykot/boykot.html&title=Boykot Çağrısı" target="_blank">
             <img src="https://www.mediamister.com/images/tools/linkedin.svg" alt="LinkedIn">
+        </a>
+
         </a>
     </div>
     <hr>
@@ -160,4 +165,3 @@
 </div>
 </body>
 </html>
-
