--- a/boykot.html
+++ b/boykot.html
@@ -175,14 +175,14 @@
             <img src="https://www.mediamister.com/images/tools/reddit.svg" alt="Reddit">
         </a>
 
-        <a class="pinterest" href="https://pinterest.com/pin/create/button/?url=https://boykotcagrisi.github.io/boykot/boykot.html=https://raw.githubusercontent.com/BoykotCagrisi/boykot/main/boykotonizleme.png&description=Boykot_Çağrısı" target="blank" title="pinterest"><i class="fa fa-pinterest-p"></i>
-            <img src="https://www.mediamister.com/images/tools/pinterest.svg" alt="Pinterest">
-        </a>
+<!--        <a class="pinterest" href="https://pinterest.com/pin/create/button/?url=https://boykotcagrisi.github.io/boykot/boykot.html=https://raw.githubusercontent.com/BoykotCagrisi/boykot/main/boykotonizleme.png&description=Boykot_Çağrısı" target="blank" title="pinterest"><i class="fa fa-pinterest-p"></i>-->
+<!--            <img src="https://www.mediamister.com/images/tools/pinterest.svg" alt="Pinterest">-->
+<!--        </a>-->
 
         <a href="https://www.snapchat.com/scan?attachmentUrl=https://boykotcagrisi.github.io/boykot/boykot.html" target="_blank">
             <img src="https://www.mediamister.com/images/tools/snapchat.svg" alt="Snapchat">
         </a>
-        
+
     </div>
     <hr>
     <h3>Arkadaşınla Linki Paylaş</h3>
