--- a/boykot.html
+++ b/boykot.html
@@ -149,8 +149,14 @@
     <h3>İletişim Bilgilerini Paylaşarak Tarım Kredi Kooperatifine Özel Şikayet İçin</h3>
     <a href="https://www.tarimkredi.org.tr/iletisim/" class="link-button">Tarım Kredi Şikayet ve İstek Formu</a>
     <hr>
-    <h3>Tarım Kredi Kooperatifi Marketleri, Bim, Şok, A-101 Marketlerine Boykot İsteğinizi Tek Seferde Gönderebilirsiniz.</h3>
-    <a href="mailto:?bcc=iletisim@tarimkredi.org.tr,iletisim@a101.com.tr,surdurulebilirlik@sokmarket.com.tr,ircontact@bim.com.tr" class="email-button">E-posta Gönder</a>
+
+
+
+    <h3>Tarım Kredi Kooperatifi, Bim, Şok ve A-101 Marketlerini Boykota Davet etmek üzere E-ilinizi Tek Seferde Gönderebilirsiniz. İçeriği Ayarlamayı Size Bırakıyoruz. Aksi takdirde Mailler Aynı İçerikten Dolayı Engellenebilir.</h3>
+    <a 
+
+
+href="mailto:?bcc=iletisim@tarimkredi.org.tr,iletisim@a101.com.tr,surdurulebilirlik@sokmarket.com.tr,ircontact@bim.com.tr" class="email-button">E-posta Gönder</a>
     <hr>
     <h3>Sosyal Medyada Paylaş</h3>
     <div class="share-buttons">
