--- a/boykot.html
+++ b/boykot.html
@@ -152,7 +152,7 @@
 
 
 
-    <h3>Tarım Kredi Kooperatifi, Bim, Şok ve A-101 Marketlerini Boykota Davet etmek üzere E-ilinizi Tek Seferde Gönderebilirsiniz. İçeriği Ayarlamayı Size Bırakıyoruz. Aksi takdirde Mailler Aynı İçerikten Dolayı Engellenebilir.</h3>
+    <h3>Tarım Kredi Kooperatifi, Bim, Şok ve A-101 Marketlerine Boykota Davet E-mailinizi Tek Seferde Gönderebilirsiniz. İçerik Sabit Olduğu Takdirde Mailler Otomatik Olarak Spam Kutusuna Düşebilir(Engellenebilir). Bu sebeple E-Mail İçeriğini Size bırakıyoruz</h3>
     <a 
 
 
