--- a/boykot.html
+++ b/boykot.html
@@ -14,7 +14,7 @@
     <meta property="og:url" content="https://boykotcagrisi.github.io/boykot/boykot.html"/>
     <meta property="og:image" content="https://raw.githubusercontent.com/BoykotCagrisi/boykot/main/boykotonizleme.png"/>
 
-
+    <link rel="preload" href="/path/to/font.woff2" as="font" type="font/woff2" crossorigin>
 
 
 
