--- a/boykot.html
+++ b/boykot.html
@@ -225,7 +225,7 @@
     <img class="qr-image" src="QRBoykot.svg" width="300" alt="QrCode">
 
     <H4>Eğer QR Kodu Okutamazsanız Tarayıcınızdan Aşağıdaki Adres İle Doğrudan Giriş Yapabilirsiniz, Mesajlaşma Uygulamalaırı İle Paylaşabilirsiniz</H4>
-    <a href="https://t.ly/boykot" style="font-weight: bold; font-size: 24px;">t.ly/boykot</a>
+    <a href="https://tinyurl.com/tboykot" style="font-weight: bold; font-size: 24px;">t.ly/boykot</a>
 
 </div>
 </body>
