--- a/boykot.html
+++ b/boykot.html
@@ -227,7 +227,7 @@
     <img class="qr-image" src="https://ik.imagekit.io/n8ow2kj2w/QRBoykot.svg?updatedAt=1718982297874" width="300" alt="QrCode">
 
     <H4>Eğer QR Kodu Okutamazsanız Tarayıcınızdan Aşağıdaki Adres İle Doğrudan Giriş Yapabilirsiniz, Mesajlaşma Uygulamalaırı İle Paylaşabilirsiniz</H4>
-    <a href="https://tinyurl.com/tboykot" style="font-weight: bold; font-size: 24px;">t.ly/boykot</a>
+    <a href="https://tinyurl.com/tboykot" style="font-weight: bold; font-size: 24px;">tinyurl.com/tboykot</a>
 
 </div>
 </body>
