--- a/boykot.html
+++ b/boykot.html
@@ -228,7 +228,11 @@
 
     <H4>Eğer QR Kodu Okutamazsanız Tarayıcınızdan Aşağıdaki Adres İle Doğrudan Giriş Yapabilirsiniz, Mesajlaşma Uygulamalaırı İle Paylaşabilirsiniz</H4>
     <a href="https://tinyurl.com/tboykot" style="font-weight: bold; font-size: 24px;">tinyurl.com/tboykot</a>
-
+    <hr>
+    <H4>Visa ve Master Bankacılık Sistemi Alternatifi Yerel Troy Kullanalım.</H4>
+    <a href="https://tinyurl.com/tboykot" style="font-weight: bold; font-size: 24px;">Iğdır Üniversitesinin Konuyla İlgili Açıklaması.</a>
+    
+    
 </div>
 </body>
 </html>
